tests/NormalTests/paczka1/small_fuzzy/76044433.err
Error in line 5: 5pjqYW9K A315 79,3
Error in line 2: sulZ S878 84,3
Error in line 9: 5pjqYW9K S878 95,5
